--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,3 @@
 DB_HOST = mongodb+srv://admin:admin@cluster0.o2awjxv.mongodb.net/db-contacts
 PORT = 3000
+JWT_SECRET = 7113E5E41B8C9F7BB7D68838193D5
