--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 DB_HOST = mongodb+srv://admin:admin@cluster0.o2awjxv.mongodb.net/db-contacts
 PORT = 3000
 JWT_SECRET = 7113E5E41B8C9F7BB7D68838193D5
+UKR_NET_EMAIL = aleksandrov.oleksii@ukr.net
+UKR_NET_API_KEY = N8Hd9SZt6oRPeQuY
